syntax = "proto2";

import "ignition/msgs/pose.proto";

package smartmouse.msgs;

message RobotState {
    required ignition.msgs.Pose true_pose = 1;
    required double left_wheel_velocity_mps = 2;
    required double right_wheel_velocity_mps = 3;
    required double left_wheel_angle_radians = 4;
    required double right_wheel_angle_radians = 5;
    required double front_left = 6;
    required double front_right = 7;
    required double gerald_left = 8;
    required double gerald_right = 9;
    required double back_left = 10;
    required double back_right = 11;
    required double front = 12;
    required double true_x_meters = 13;
    required double true_y_meters = 14;
    required double true_yaw_rad = 15;

}
